# ironpath

./: CLAUDE.md  DATABASE_INTEGRATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  OAUTH_SETUP.md  PERSISTENCE_IMPLEMENTATION.md  PROGRESS_TRACKING_FEATURES.md  QUICK_START.md  README.md  verify-oauth-setup.sh
backend/: .coveragerc  .gitignore  README.md  TESTING.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  test_generate.json  test_request.json
backend/alembic/: env.py
backend/alembic/versions/: 5f9546fe8980_add_multi_agent_tables.py  e2e98efc3311_add_user_profile_data_table.py
backend/docs/: API_QUICK_REFERENCE.md  ARCHITECTURE_DIAGRAM.md  PHASE_1_QUICK_REFERENCE.md  PHASE_2_QUICK_REFERENCE.md  PHASE_3_IMPLEMENTATION_SUMMARY.md
backend/src/: __init__.py  init_db.py  main.py  seed_exercises.py  seed_methodologies.py
backend/src/core/: __init__.py  config.py  database.py
backend/src/models/: __init__.py  request_models.py  schemas.py  tables.py
backend/src/routes/: __init__.py  feedback.py  methodologies.py  profiles.py  programs.py  progress.py  readiness.py  router.py  users.py
backend/src/services/: __init__.py  agent.py  agent_prompts.py  analyst_agent.py  base_agent.py  feedback_agent.py  math.py  programmer_agent.py  router_agent.py
backend/tests/: README.md  __init__.py  conftest.py  test_agents.py  test_api_routes.py  test_e2e_checklist.py  test_integration.py  test_performance.py  test_program_generation.py  test_real_api_integration.py
docs/: MULTI_AGENT_IMPLEMENTATION_PLAN.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  (+1 more)
(+58 files in other folders)
